--- a/config-server/src/main/resources/config/albums-stock.yaml
+++ b/config-server/src/main/resources/config/albums-stock.yaml
@@ -1,2 +1,22 @@
 server:
   port: 8000
+spring:
+  sql:
+    init:
+      platform: h2
+  datasource:
+    driver-class-name: org.h2.Driver
+    username: sa
+    url: jdbc:h2:mem:albumdb
+    password: ''
+  h2:
+    console:
+      enabled: 'true'
+  jpa:
+    defer-datasource-initialization: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+    show-sql: 'true'
+    hibernate:
+      ddl-auto: update
