--- a/config-server/src/main/resources/config/albums-stock.yaml
+++ b/config-server/src/main/resources/config/albums-stock.yaml
@@ -1,5 +1,6 @@
 server:
   port: 8000
+
 spring:
   sql:
     init:
@@ -20,3 +21,11 @@ spring:
     show-sql: 'true'
     hibernate:
       ddl-auto: update
+
+eureka:
+  client:
+    register-with-eureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
