--- a/albums-stock/src/main/resources/application.yaml
+++ b/albums-stock/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 spring:
-  cloud:
-    config:
-      uri: http://localhost:8888
   application:
     name: albums-stock
+  config:
+    import: "configserver:http://localhost:8888"
+  cloud:
+    config:
+      fail-fast: true
