--- a/eureka-server/src/main/resources/application.yaml
+++ b/eureka-server/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: eureka-server
+  config:
+    import: "configserver:http://localhost:8888"
   cloud:
     config:
-      uri: http://localhost:8888
+      fail-fast: true
