--- a/config-server/src/main/resources/config/gateway.yaml
+++ b/config-server/src/main/resources/config/gateway.yaml
@@ -13,3 +13,12 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
